--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -226,7 +226,7 @@ input::placeholder {
 
 .overlay {
     background: #fff;
-    position: fixed;
+    position: absolute;
     display: none;
     width: 100%;
     height: 100%;
